se agrega el fronted socialsoccer

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -31,11 +31,16 @@
 // App-wide Styles
 //
 
+MainColor = #4CAF50//#009688////#CDDC39//#8BC34A//#99c84a
+
 .browserupgrade
   background #ccc
   color #000
   margin 0.2em 0
   padding 0.2em 0
+
+body
+  font-family: 'Roboto', sans-serif;
 
 // Component styles are injected through grunt
 /* inject:styl */
@@ -47,4 +52,5 @@
 @import 'users/users-update/users-update';
 @import '../components/footer/footer';
 @import '../components/modal/modal';
+@import '../components/navbar/navbar';
 /* endinject */
