--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -1,1 +1,47 @@
-
+.carousel-caption
+  >p
+    font-size: 30px
+    text-transform: uppercase;
+.PaddingSides
+  padding-left: 0
+  padding-right: 0
+.Intro
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
+  background-image: url("../../assets/images/main/balon2.jpg")
+  &-container
+    margin: 80px 0
+  &-button
+    background-color: MainColor
+    color: white
+    text-transform: uppercase
+    font-size: 17px
+    border-radius: 0px
+    padding: 20px 30px
+  &-title
+    text-transform: uppercase
+    font-weight: bold
+    background: rgba(17, 24, 31, 0.9)
+    padding: 30px 30px
+    border-left: 1px solid MainColor
+    >p
+      margin: 0
+      color: white
+      line-height: 54px
+    >p:nth-child(1)
+      font-size: 26px
+    >p:nth-child(2)
+      font-size: 66px
+      color: MainColor
+    >p:nth-child(3)
+      font-size: 34px
+.carousel-inner > .item > img
+  width 100%
+  height 500px
+  padding: 0px 0px 0.5em
+.hola
+  background: rgba(17, 24, 31, 0.9)
+  color white
+  font-size 25px
+  text-align center
