--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Istok+Web);
+/*@import url(https://fonts.googleapis.com/css?family=Istok+Web);*/
 @keyframes slidy {
     0% {
         left: 0%;
@@ -29,10 +29,6 @@
     }
 }
 
-* {
-    box-sizing: border-box;
-}
-
 .Cancha {
     font-family: arial;
     font-size: 3em;
@@ -44,7 +40,7 @@
 body,
 figure {
     margin: 0;
-    font-family: Istok Web, sans-serif;
+    /*font-family: Istok Web, sans-serif;*/
     font-weight: 100;
     position: relative;
 }
@@ -71,12 +67,12 @@ figure.slider figure {
 
 figure.slider img {
     width: 100%;
-    height: 315px;
+    height: 500px;
 }
 
 figure.slider figure figcaption {
     position: absolute;
-    bottom: 3em;
+    bottom: 5em;
     background: rgba(0, 0, 0, 0.4);
     color: #fff;
     width: 100%;
@@ -91,6 +87,7 @@ figure.slider figure figcaption {
 
 .MainImage {
     background-repeat: no-repeat;
+    background: rgba(0, 0, 0, 0.4);
 }
 
 .Descripcion {
@@ -100,35 +97,47 @@ figure.slider figure figcaption {
     text-align: justify;
     font-size: 20px;
     padding-top: 0px;
-    margin-left: 0px;
+    margin: 2em;
     width: 70%;
 }
 
 .Cancha-description {
-    background: black;
+
     text-align: center;
 }
 
 .Cancha-d {
     text-align: center;
-}
-
-.ng-scope {
-    background: black;
+    background: rgba(0, 0, 0, 0.4);
 }
 
 .Cancha-image {
     display: inline-block;
-    width: 376px;
-    margin: 30px;
+
+    width: 250px;
+    margin: 40px;
     border-radius: 8px;
+}
+.Cancha-main{
+  background-image: url("../../assets/images/main/15.jpg");
+  background-repeat: no-repeat;
+  font-size: 20px;
 }
 
 .Somos-title {
     text-align: center;
     color: white;
     font-size: 40px;
+    margin-top: 0;
 }
+.Somos{
+    text-align: justify;
+    margin: 2em;
+}
+.slider{
+  margin-top: 1em;
+}
+
 
 
 
