--- a/client/components/footer/footer.css
+++ b/client/components/footer/footer.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .About-item {
     display: inline-block;
     list-style: none;
@@ -15,7 +10,7 @@
 }
 
 .Contact {
-    background: black;
+    background: white;
     text-align: center;
 }
 
@@ -29,8 +24,9 @@
     padding: .3em .5em;
 }
 
-.fa {
-    font-size: 1.6em;
+.Contact >div>i{
+  font-size: 1.6em;
+  color: black;
 }
 
 .Footer-contact {
@@ -56,7 +52,7 @@
     display: block;
     padding: 1em;
     text-align: center;
-    background-image: url("../../assets/images/footer/2.jpg");
+    background: rgba(17, 24, 31, 0.9)
 }
 
 .Contact-title {
