--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,53 +1,76 @@
 
-<header id="Header" class="Header">
-
-
-    <div class="Header-Text">
-        <ul>
-            <li>
-                <h1 class="Social">SOCIAL</h1>
-                <img src="assets/images/header/1.jpg" class="Header-image">
-                <h1 class="Social">SOCCER</h1>
-            </li>
-        </ul>
+<header class="Header-container">
+  <div class="container">
+    <div class="row Header-containerAlignV">
+      <div class="col-xs-6">
+        <h1>Social Soccer</h1>
+      </div>
+      <div class="col-xs-6 text-right">
+        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
+          <i class="fa fa-bars" aria-hidden="true"></i>
+        </button>
+        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="">Registrarse</md-button>
+        <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="">Iniciar Sesión</md-button>
+      </div>
     </div>
-
-<div class="navb">
-
-
-          <nav class="navbar">
-            <ul class="menu">
-                <li><a href="main"><span class="icon-home"></span>INICIO</a>
-                    <!--ul class="sub-menu">
-                <li><a href="#">Canchas</a></li>
-                <li><a href="#">Sub-Menu 2</a></li>
-                <li><a href="#">Sub-Menu 3</a></li>
-                    </ul-->
-                </li>
-                <li><a href="courts"><span class="icon-futbol-o"></span>CANCHAS</a></li>
-                <li><a href="login"><span class="icon-user"></span> INICIO DE SESION</a>
-                    <!--ul class="sub-menu">
-                <li><a href="#">Sub-Menu 1</a></li>
-                <li><a href="#">Level 3 Menu</a>
-
-                </li>
-            </ul>
-            </li-->
-                    <li><a href="users-create"><span class="icon-clipboard"></span>REGISTRARSE</a></li>
-
-            </ul>
-        </nav>
-</div>
-
-
-        <!--section id="Navbar" class="Navbar"
-
-    <div class="Search">
-        <form class="Search-form">
-            <input class="Search-form-input " placeholder="Buscar">
-            <input class="Search-form-submit " type="submit" value="Ir">
-        </form>
-
+  </div>
+</header>
+<!--/Header-->
+<!--menu-->
+<div class="Menucontainer">
+  <nav class="collapse navbar navbar-collapse" id="navMenu">
+    <div class="container">
+      <div class="row AlignNavbar">
+        <div class="col-xs-12 col-xs-offset-0 col-md-6 col-md-offset-0 AlignItemsNavbar">
+          <!--<ul class="nav navbar-nav">
+            <li><a href="main" class="navbar-link text-center">Inicio</a></li>
+            <li><a href="login" class="navbar-link text-center">Nosotros</a></li>
+            <li><a href="users-create" class="navbar-link text-center">Servicios</a></li>
+            <li ng-if="nav.authService.isAdmin()"><a ui-sref="users-list" class="navbar-link text-center">Mis usuarios</a></li>
+            <li ng-show="nav.authService.isAuthenticated()"><a ng-click="nav.authService.logout()" href="#">Salir</a></li>
+          </ul>-->
+          <md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="navigation links">
+            <md-nav-item md-nav-sref="main" name="page1">
+              Inicio
+            </md-nav-item>
+            <md-nav-item md-nav-sref="users-create" name="page2">
+              Nosotros
+            </md-nav-item>
+            <md-nav-item md-nav-sref="goto('page3')" name="page3">
+              Servicios
+            </md-nav-item>
+            <md-nav-item md-nav-sref="users-list" ng-if="nav.authService.isAdmin()" name="page4">
+              Mis usuarios
+            </md-nav-item>
+          </md-nav-bar>
         </div>
-        </nav>-->
-      </header>
+        <div class="col-xs-12 col-md-4 hidden-xs">
+          <form>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="SocialSoccer">
+              <span class="input-group-btn">
+                <button class="btn Btn-adsi">
+                  <span class="hidden-xs hidden-sm">Buscar</span>
+                  <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
+                </button>
+              </span>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div class="col-xs-12 visible-xs MarginTopSearch">
+    <form>
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="¿Encontro lo que buscaba?">
+          <span class="input-group-btn">
+            <button class="btn Btn-adsi">
+              <span class="hidden-xs hidden-sm">Buscar</span>
+              <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
+            </button>
+        </span>
+      </div>
+    </form>
+  </div>
+</div>
