--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -5,6 +5,7 @@
 .AlignItemsNavbar
   display flex
   justify-content center
+
 .Header-container
   background: rgba(17, 24, 31, 0.9)
 
@@ -37,3 +38,5 @@ input.form-control:focus
   color white
 .btn.Btn-adsi:hover
   background-color  #428bca
+h1
+  font-size 20px
