--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -47,6 +47,7 @@ body
 @import 'courts/courts';
 @import 'login/login';
 @import 'main/main';
+@import 'nosotros/nosotros';
 @import 'users/users-create/users-create';
 @import 'users/users-list/users-list';
 @import 'users/users-update/users-update';
