--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,6 +1,4 @@
 <section class="Footer-contact">
-
-
     <div class="Contact-information">
         <h3 class="Contact-title">Contáctenos</h3>
         <div class="Contact-information-adress">
@@ -33,3 +31,28 @@
         </div>
     </div>
 </section>
+
+<!--footer class="FooterContainer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 NavbarForm-footer">
+        <form>
+          <h4>hola xd</h4>
+          <div>
+            <input type="email" class="form-control">
+            <small class="text-muted">texto claro</small>
+            <span></span>
+            <span></span>
+          </div>
+          <button type="submit" class="btn btn-primary">suscribirme</button>
+        </form>
+      </div>
+      <div class="col-md-3 col-md-offset-5 NavbarFooter">
+        <h4>Navegacion</h4>
+        <ul class="nav">
+          <li><a href="#" class="navbar-link">Home</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
