--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -9,8 +9,10 @@
         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
-        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="hidden-xs hidden-md hiddden-sm">Registrarse</md-button>
+        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="hidden-xs">Registrarse</md-button>
         <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="">Iniciar Sesión</md-button>
+        <md-button ng-if="nav.authService.isAuthenticated()"class="">{{nav.authService.userlog()}}</md-button>
+        <md-button type="button" name="button" ng-show="nav.authService.isAuthenticated()" ng-click="nav.authService.logout()" ui-sref="main" class="">Cerrar Sesión</md-button>
       </div>
     </div>
   </div>
