--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -40,8 +40,16 @@
   width 100%
   height 500px
   padding: 0px 0px 0.5em
-.hola
-  background: rgba(17, 24, 31, 0.9)
-  color white
-  font-size 25px
-  text-align center
+
+.Informacion
+  &-item
+    margin 30px 0
+    >i
+      font-size 150px
+      color green
+    >p
+      text-transform uppercase
+      font-size 35px
+    >h3
+      font-weight bold
+      font-size 50px
