--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -48,6 +48,9 @@ body
 @import 'login/login';
 @import 'main/main';
 @import 'nosotros/nosotros';
+@import 'profile/profile';
+@import 'reservations/reservations-list/reservations-list';
+@import 'reservations/reservations';
 @import 'users/users-create/users-create';
 @import 'users/users-list/users-list';
 @import 'users/users-update/users-update';
