--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -13,6 +13,11 @@
   margin: 2em;
   width: 70%;
 
+.Informacion-item
+  background: rgba(0, 0, 0, 0.4);
+  border-radius 20px
+  padding 0
+
 
 .Tittle
   color Lightblue
@@ -28,8 +33,8 @@
   background: rgba(0, 0, 0, 0.4);
 
 
-.containerText
-  background: rgba(0, 0, 0, 0.4);
+
+
 
 
 .Cancha-image
@@ -59,7 +64,13 @@
 
 @media screen and (max-width: 448px) {
   .Cancha-image {
-    width: 290px;
-    margin: 0;
+    width 244px
+    margin-left 0
+    margin-right 0
     }
 }
+
+@media screen and (min-width 320)
+  .Informacion-item
+    margin-left 0
+    margin-right 0
