--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,15 +1,15 @@
 <section class="Footer-contact">
     <div class="Contact-information">
-        <h3 class="Contact-title">Contáctenos</h3>
+        <h3 class="Contact-title"><strong>Contáctenos</strong></h3>
         <div class="Contact-information-adress">
             <strong>Lugar:</strong> Palmira, Valle, Colombia.
         </div>
         <div class="Contact-information-phone">
-            <strong>Teléfono: </strong> +(57) 287 37 21 Móvil: 318 412 5678 o 314 871 3550
+            <strong>Teléfono: </strong> +(57) 287 37 21
         </div>
         <div class="Contact-information-email">
             <strong>Email: </strong>
-            <a href="mailto:SocialSoccer.com" class="link">SocialSoccer.com</a>
+            <a href="mailto:socialsoccer1290@gmail.com" class="link">socialsoccer1290@gmail.com</a>
         </div>
     </div>
 </section>
@@ -18,16 +18,16 @@
     <div class="Contact">
         <h3 class="Contact-title"></h3>
         <div class="Contact-facebook">
-            <i class="fa fa-facebook" aria-hidden="true"></i>
+            <a class="fa fa-facebook" href="https://www.facebook.com/Social-Soccer"aria-hidden="true"></a>
         </div>
         <div class="Contact-twitter">
-            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <a class="fa fa-twitter" href="https:/SocialSoccer1290@gmail.com" aria-hidden="true"></a>
         </div>
         <div class="Contact-instagram">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
+            <a class="fa fa-instagram" aria-hidden="true"></a>
         </div>
         <div class="Contact-google">
-            <i class="fa fa-google-plus" aria-hidden="true"></i>
+            <a class="fa fa-google-plus" aria-hidden="true"></a>
         </div>
     </div>
 </section>
