--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -15,7 +15,8 @@
   color white
   font-weight bold
   font-size 20px
-
+.Usuario
+  margin-left 19.5em
 .Header-containerAlignV
   display flex
   align-items center
@@ -27,7 +28,9 @@
   font-size 20px
 input.form-control:focus
   border-color MainColor
-
+.input-group
+  margin-bottom 1em
+  margin-top 1em
 .navbar-nav > li > a
   color #363636
 .Menucontainer
@@ -40,3 +43,6 @@ input.form-control:focus
   background-color  #428bca
 h1
   font-size 20px
+.row
+  margin-left 0
+  margin-right 0
