--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -2,9 +2,14 @@
   >p
     font-size: 30px
     text-transform: uppercase;
-.PaddingSides
+
+.Carousel-padding
   padding-left: 0
   padding-right: 0
+
+.row
+  margin-left 0
+  margin-right 0
 .Intro
   background-position: center
   background-size: cover
@@ -53,3 +58,29 @@
     >h3
       font-weight bold
       font-size 50px
+.Btn-adsi
+  margin-bottom 1em
+.Canchas
+  display inline-block
+  text-align center
+  background rgba(0, 0, 0, 0.51)
+  color white
+  margin-top 1em
+  border-radius 10px
+  border solid 2px rgba(25, 78, 218, 0.26)
+.imagen
+  width 250px
+  margin-top 1em
+  border-radius 20px
+  border solid 2px #f1efef
+
+.Slide-padding
+  margin 0
+
+.pintura
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
+  background-image: url("../../assets/images/main/18.jpg")
+  width: 100%
+  padding-bottom 1em
