Se agrega el modulo de perfil y la actualizacion de los datos en el perfil

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -15,8 +15,7 @@
   color white
   font-weight bold
   font-size 20px
-.Usuario
-  margin-left 19.5em
+
 .Header-containerAlignV
   display flex
   align-items center
@@ -31,6 +30,8 @@ input.form-control:focus
 .input-group
   margin-bottom 1em
   margin-top 1em
+  display flex
+  width 94%
 .navbar-nav > li > a
   color #363636
 .Menucontainer
@@ -41,8 +42,18 @@ input.form-control:focus
   color white
 .btn.Btn-adsi:hover
   background-color  #428bca
-h1
+
+.md-button
+  padding 0 0px
+  margin 17px 4px
+a
   font-size 20px
-.row
-  margin-left 0
-  margin-right 0
+  text-decoration none !important
+  color white
+
+a:hover
+  color white
+button
+  font-size: 25px;
+.Enlace
+  color black
