--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,72 +1,67 @@
-
+<!--Header-->
 <header class="Header-container">
   <div class="container">
     <div class="row Header-containerAlignV">
-      <div class="col-xs-5">
-        <h1>Social Soccer</h1>
+      <div class="col-xs-5 col-md-8 ">
+        <a ui-sref="main">Social Soccer</a>
       </div>
-      <div class="col-xs-12 col-md-12 col-lg-12 text-right">
+
+      <div class="col-xs-10 col-md-10 col-lg-10 ">
         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
+          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button">Iniciar Sesión</md-button>
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
-        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="hidden-xs">Registrarse</md-button>
-        <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="">Iniciar Sesión</md-button>
+        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="hidden-xs col-sm-pull-2 ">Registrarse</md-button>
+        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="login" class="hidden-xs ">Iniciar Sesión</md-button>
 
-        <md-button name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="col-xs-12 col-md-3 hidden-xs hidden-md Usuario">Cerrar Sesion</md-button>
-        <md-button ng-if="nav.authService.isAuthenticated()" class="col-md-3 Usuario-2">{{nav.authService.userlog()}}</md-button>
-
+        <md-button ui-sref="profile" ng-show="nav.authService.isAuthenticated()" class=" col-xs-5 col-sm-4 col-md-4 col-lg-4 col-md-push-3  Usuario-2">{{nav.authService.userlog()}}</md-button>
+       <md-button name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class=" hidden-xs hidden-sm  col-sm-pull-3 col-md-push-3  Usuario">Cerrar Sesion</md-button>
       </div>
     </div>
   </div>
 </header>
-<!--/Header-->
-<!--menu-->
-<div class="Menucontainer">
+<!--/header-->
+<!--/menu-->
+<div class="MenuContainer">
   <nav class="collapse navbar navbar-collapse" id="navMenu">
     <div class="container">
-      <div class="row AlignNavbar">
-        <div class="col-xs-12 col-xs-offset-0 col-md-6 col-md-offset-0 AlignItemsNavbar">
-          <!--ul class="nav navbar-nav visible-xs ">
-            <li><a href="main" class="navbar-link text-center">Inicio</a></li>
-            <li><a href="login" class="navbar-link text-center">Nosotros</a></li>
-            <li><a href="users-create" class="navbar-link text-center">Servicios</a></li>
-            <li ng-if="nav.authService.isAdmin()"><a ui-sref="users-list" class="navbar-link text-center">Mis usuarios</a></li>
-            <li ng-show="nav.authService.isAuthenticated()"><a ng-click="nav.authService.logout()" href="#">Salir</a></li>
-          </ul-->
-          <md-nav-bar md-selected-nav-item="currentNavItem " nav-bar-aria-label="navigation links">
-            <md-nav-item md-nav-sref="main" name="page1">
-              Inicio
-            </md-nav-item>
-            <md-nav-item md-nav-sref="nosotros" name="page2">
-              Nosotros
-            </md-nav-item>
-            <md-nav-item md-nav-sref="reservations" ng-if="nav.authService.isAuthenticated()" name="page2">
-              Reservar
-            </md-nav-item>
-            <md-nav-item class="col-xs-12 col-md-4 hidden-md hidden-lg" md-nav-sref="main" name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main">
-              Cerrar Sesion
-            </md-nav-item>
-            <!--md-nav-item md-nav-sref="goto('page3')" name="page3">
-              Servicios
-            </md-nav-item-->
+      <div class="row AligNavbar">
+        <div class="col-xs-12 " nav-bar-ariaiu-label="navigation links">
+          <ul class="nav navbar-nav">
+            <li >
+              <a  ui-sref="main" name="page1" class="navbar-link text-center" ng-click="nav.ocultarCollapse()">
+                Inicio</a>
+            </li>
+            <li >
+              <a ui-sref="nosotros" name="page2" class="navbar-link text-center"  ng-click="nav.ocultarCollapse()">
+                Nosotros</a>
+            </li>
+            <li >
+              <a ui-sref="users-list"  ng-hide="!nav.authService.isAuthenticated()" name="page4" ui-sref-active="active" class="navbar-link text-center" ng-click="nav.ocultarCollapse()">
+                Mis Usuarios</a>
+            </li>
+            <li>
+              <a class="navbar-link text-center  hidden-md    hidden-lg " ui-sref="main" name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main"
+                  ng-click="nav.ocultarCollapse()">
+                Cerrar sesion</a>
+            </li>
+            <li >
+              <a ui-sref="users-create"   ng-hide="!nav.authService.isAuthenticated()" name="page5"class="navbar-link text-center " ng-click="nav.ocultarCollapse()">
+                Registrarse</a>
+            </li>
 
-            <md-nav-item md-nav-sref="users-list"  ng-if="nav.authService.isAdmin()" name="page4">
-              Mis usuarios
-            </md-nav-item>
-            <md-nav-item md-nav-sref="reservations-list"  ng-if="nav.authService.isOwner()" name="page4">
-              Mis reservas
-            </md-nav-item>
-
-            <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="visible-xs hidden-lg"name="page5">Registrarse</md-button>
-
-            </md-nav-item>
-          </md-nav-bar>
+            <li>
+            <a ui-sref="reservations-list"  ng-if="nav.authService.isOwner()" name="page4">
+              Mis reservas</a>
+            </li>
+          </ul>
         </div>
-        <div class="col-xs-12 col-md-4 hidden-xs">
+      </div>
+        <div class=" col-xs-12 col-md-12 hidden-xs MarginTopSearch-main Search">
           <form>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="SocialSoccer">
-              <span class="input-group-btn">
+             <input type="text" class="form-control" placeholder="¿Encontro lo que buscaba?"></input>
+              <span class="input-group-biutn">
                 <button class="btn Btn-adsi">
                   <span class="hidden-xs hidden-sm">Buscar</span>
                   <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
@@ -81,14 +76,13 @@
   <div class="col-xs-12 visible-xs MarginTopSearch">
     <form>
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="¿Encontro lo que buscaba?">
-          <span class="input-group-btn">
-            <button class="btn Btn-adsi">
-              <span class="hidden-xs hidden-sm">Buscar</span>
-              <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
-            </button>
+       <input type="text" class="form-control" placeholder="¿Encontro lo que buscaba?"></input>
+        <span class="input-group-btn">
+          <button class="btn Btn-adsi">
+            <span class="hidden-xs hidden-sm">Buscar</span>
+            <i class="fa fa-search IconSearch visible-xs visible-sm"></i>
+          </button>
         </span>
       </div>
     </form>
   </div>
-</div>
