se han hecho cambios en el footer

--- a/client/components/footer/footer.styl
+++ b/client/components/footer/footer.styl
@@ -1,7 +1,6 @@
 .footer
   padding: 50px 0 20px 0
-  background-color: rgb(40, 46, 52)
-  color: #878c94
+  background-color: rgba(17, 24, 31, 0.9)
 .footer .title
   text-align: left
   color:#fff
@@ -11,33 +10,32 @@
 .contact-form .textarea
   min-height:125px
   resize:none
-.form-control
+.foo
   box-shadow:none
   border-color:#eee
   height:49px
-.form-control:focus
+.foo:focus
   box-shadow:none
-.form-control-feedback
+.foo-feedback
   line-height:50px
-.form-control-feedback
+.foo-feedback
   line-height: 50px
   top: 0px
 .Text
   color white
 .fa-facebook::before
   color #1e4ed8
-  font-size: 27px;
-  margin: 5px;
-  
+  font-size: 27px
+  margin: 5px
 .fa-instagram::before
    color #b71e5e
-   font-size: 27px;
-   margin: 5px;
+   font-size: 27px
+   margin: 5px
 .fa-twitter::before
   color #18b0d2
-  font-size: 27px;
-  margin: 5px;
+  font-size: 27px
+  margin: 5px
 .fa-google::before
   color #a23737
-  font-size: 27px;
-  margin: 5px;
+  font-size: 27px
+  margin: 5px
