--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,7 +1,7 @@
-<section class="footer">
-  <div class="container">
+
+  <section class="container">
     <div class="row">
-      <div class="col-sm-6 ">
+      <div class="col-sm-6 social ">
         <h4 class="title"><strong>SOCIAL SOCCER</strong></h4>
         <p class="text-justify Text">Social Soccer es una aplicacion web que te ayudara y te facilitara las cosas
            a la hora de reservar tu cancha, contamos con diversos establecimientos de canchas sinteticas
@@ -9,25 +9,25 @@
         </p>
         <button ui-sref="users-create" type="button" class="btn btn-primary btn-lg active">¡Comienza Ya!</button>
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-6 social">
         <h4 class="title"><strong>Ayudanos a mejorar</strong></h4>
          <form role="form" id="contact-form" class="contact-form">
             <div class="row">
              <div class="col-md-6">
                <div class="form-group">
-                 <input type="text" class="form-control" name="Name" autocomplete="off" id="Name" placeholder="Nombre">
+                 <input type="text" class="form-control foo" name="Name" autocomplete="off" id="Name" placeholder="Nombre">
               </div>
             </div>
           <div class="col-md-6">
             <div class="form-group">
-                <input type="email" class="form-control" name="email" autocomplete="off" id="email" placeholder="E-mail">
+                <input type="email" class="form-control foo" name="email" autocomplete="off" id="email" placeholder="E-mail">
             </div>
           </div>
         </div>
             <div class="row">
               <div class="col-md-12">
                <div class="form-group">
-                 <textarea class="form-control textarea" rows="3" name="Message" id="Message" placeholder="Tu opinion cuenta bastante"></textarea>
+                 <textarea class="form-control textarea foo" rows="3" name="Message" id="Message" placeholder="Tu opinion cuenta bastante."></textarea>
               </div>
             </div>
           </div>
@@ -42,7 +42,7 @@
 
     <hr>
        <div class="row text-center">
-         <h4>Social Soccer</h4>
+         <h4><strong>Social Soccer</strong></h4>
         </div>
 
        <div class="icon text-center">
@@ -51,5 +51,4 @@
          <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
          <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
        </div>
-  </div>
-</section>
+  </section>
