cambios en el main y footer

--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,58 +1,56 @@
-<section class="Footer-contact">
-    <div class="Contact-information">
-        <h3 class="Contact-title"><strong>Contáctenos</strong></h3>
-        <div class="Contact-information-adress">
-            <strong>Lugar:</strong> Palmira, Valle, Colombia.
-        </div>
-        <div class="Contact-information-phone">
-            <strong>Teléfono: </strong> +(57) 287 37 21
-        </div>
-        <div class="Contact-information-email">
-            <strong>Email: </strong>
-            <a href="mailto:socialsoccer1290@gmail.com" class="link">socialsoccer1290@gmail.com</a>
-        </div>
-    </div>
-</section>
 
-<section class="social networks">
-    <div class="Contact">
-        <h3 class="Contact-title"></h3>
-        <div class="Contact-facebook">
-            <a class="fa fa-facebook" href="https://www.facebook.com/Social-Soccer"aria-hidden="true"></a>
-        </div>
-        <div class="Contact-twitter">
-            <a class="fa fa-twitter" href="https:/SocialSoccer1290@gmail.com" aria-hidden="true"></a>
-        </div>
-        <div class="Contact-instagram">
-            <a class="fa fa-instagram" aria-hidden="true"></a>
-        </div>
-        <div class="Contact-google">
-            <a class="fa fa-google-plus" aria-hidden="true"></a>
-        </div>
-    </div>
-</section>
-
-<!--footer class="FooterContainer">
-  <div class="container">
+  <section class="container">
     <div class="row">
-      <div class="col-md-4 NavbarForm-footer">
-        <form>
-          <h4>hola xd</h4>
-          <div>
-            <input type="email" class="form-control">
-            <small class="text-muted">texto claro</small>
-            <span></span>
-            <span></span>
+      <div class="col-sm-6 social ">
+        <h4 class="title"><strong>SOCIAL SOCCER</strong></h4>
+        <p class="text-justify Text">Social Soccer es una aplicacion web que te ayudara y te facilitara las cosas
+           a la hora de reservar tu cancha, contamos con diversos establecimientos de canchas sinteticas
+           para que tu elijas la de tu preferencia. Danos la oportunidad de divertirte
+        </p>
+        <button ui-sref="users-create" type="button" class="btn btn-primary active">¡Comienza Ya!</button>
+      </div>
+      <div class="col-sm-6 social">
+        <h4 class="title"><strong>Ayudanos a Mejorar</strong></h4>
+        
+         <form role="form" id="contact-form" class="contact-form">
+            <div class="row">
+             <div class="col-md-6">
+               <div class="form-group">
+                 <input type="text" class="form-control foo" name="Name" autocomplete="off" id="Name" placeholder="Nombre">
+              </div>
+            </div>
+          <div class="col-md-6">
+            <div class="form-group">
+                <input type="email" class="form-control foo" name="email" autocomplete="off" id="email" placeholder="E-mail">
+            </div>
           </div>
-          <button type="submit" class="btn btn-primary">suscribirme</button>
-        </form>
-      </div>
-      <div class="col-md-3 col-md-offset-5 NavbarFooter">
-        <h4>Navegacion</h4>
-        <ul class="nav">
-          <li><a href="#" class="navbar-link">Home</a></li>
-        </ul>
-      </div>
+        </div>
+            <div class="row">
+              <div class="col-md-12">
+               <div class="form-group">
+                 <textarea class="form-control textarea foo" rows="3" name="Message" id="Message" placeholder="Tu opinion cuenta bastante."></textarea>
+              </div>
+            </div>
+          </div>
+          <p class="text-justify Text">Aporta tu comenterio para ayudarnos a ofrecerte un mejor servicio y que asi tu experencia con nosotros sea mejor.</p>
+            <div class="row">
+             <div class="col-md-12">
+               <button type="button" class="btn btn-primary active">Enviar Mensaje</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-</footer>
+
+    <hr>
+       <div class="row text-center">
+         <h4 class="opacidad"><strong>Social Soccer</strong></h4>
+        </div>
+
+       <div class="icon text-center">
+         <a href="#" class="social"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+         <a href="#" class="social"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+         <a href="#" class="social"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+         <a href="#" class="social"><i class="fa fa-google" aria-hidden="true"></i></a>
+       </div>
+  </section>
