--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -45,6 +45,7 @@ body
 // Component styles are injected through grunt
 /* inject:styl */
 @import 'courts/courts';
+@import 'info/info';
 @import 'login/login';
 @import 'main/main';
 @import 'nosotros/nosotros';
