se realizan cambios de diseño en el perfil, nosotros y barra de navegacion

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -51,6 +51,7 @@ body
 @import 'profile/profile';
 @import 'reservations/reservations-list/reservations-list';
 @import 'reservations/reservations';
+@import 'upload-file/upload-file/upload-file';
 @import 'users/users-create/users-create';
 @import 'users/users-list/users-list';
 @import 'users/users-update/users-update';
