--- a/client/components/footer/footer.styl
+++ b/client/components/footer/footer.styl
@@ -4,16 +4,28 @@
 .footer .title
   text-align: left
   color:#fff
+
+  font-size:20px
+.contact-form
+  margin-top:15px
+.contact-form .textarea
+  min-height:90px
+
   font-size:25px
 .contact-form
   margin-top:15px
 .contact-form .textarea
   min-height:125px
+
   resize:none
 .foo
   box-shadow:none
   border-color:#eee
+
+  height:27px
+
   height:49px
+
 .foo:focus
   box-shadow:none
 .foo-feedback
@@ -23,6 +35,29 @@
   top: 0px
 .Text
   color white
+  font-size: small
+.fa-facebook::before
+  color #1e4ed8
+  font-size: 25px
+  margin: 5px
+.fa-instagram::before
+   color #b71e5e
+   font-size: 25px
+   margin: 5px
+.fa-twitter::before
+  color #18b0d2
+  font-size: 25px
+  margin: 5px
+.fa-google::before
+  color #a23737
+  font-size: 25px
+  margin: 5px
+.opacidad
+  color: #6d6d6d
+.btn-primary
+  font-size: 12px
+
+
 .fa-facebook::before
   color #1e4ed8
   font-size: 27px
