--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -45,6 +45,7 @@ input.form-control:focus
 
 .md-button
   margin 17px 4px
+  font-size: 15px;
 a
   font-size 20px
   text-decoration none !important
@@ -56,3 +57,13 @@ button
   font-size: 25px;
 .Enlace
   color black
+@media (min-width: 1200px)
+  .col-lg-10 {
+    width: 28%;
+    }
+
+@media (min-width: 992px)
+  .col-md-10 {
+     width: 33%;
+     }
+    
