--- a/client/app/profile/profile.styl
+++ b/client/app/profile/profile.styl
@@ -1,36 +1,85 @@
+.container-p {
+    margin: 50px auto;
+    width: 600px;
 
-.card
-  box-shadow 0 4px 8px 0 rgba(0, 0, 0, 0.2)
-  display inline-block
-  max-width 300px
-  margin-bottom 35px
-  margin-top 35px
+  }
+
+.letra
+  font-size: 14px
+  text-align left
+a {
+
+    transition: all ease 0.3s;
+  }
+.select
+  margin-left 117px
+  font-size 17px !important
+  margin-bottom 0.8em
+  margin-top .5em
+.Subir
+  font-size 17px !important
   margin-left 220px
-  text-align center
-
-.title
-  color: grey;
-  font-size: 18px;
-.editar
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #5cb85c;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-a
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
-
-.img-profile
-  border-radius 50%
 .Editar
-  padding: 10px 100px;
-  font-size: 19px;
-button:hover, a:hover
-  opacity: 0.7;
+  font-size 17px !important
+
+.profile-box {
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    max-width 500px
+  }
+.profile-box .profile-picture {
+    top 177px !impotant
+    left: 50%;
+    margin-left: -55px;
+  }
+.profile-box .profile-picture img {
+    border: 5px solid #fff;
+    border-radius: 100%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    width: 120px;
+    height: 120px;
+    margin-left: 225px;
+  }
+
+.profile-cover-image {
+
+    overflow: hidden;
+  }
+.profile-cover-image img {
+    width: 100%;
+    height: 174px;
+  }
+
+.profile-content {
+    padding: 40px 20px;
+    text-align: center;
+  }
+.profile-content h1 {
+    font-weight: normal;
+    margin-bottom: 0.2em;
+  }
+.profile-content p {
+    font-size: 1.1em;
+    line-height: 1.6;
+    color: #d2d2d2;
+  }
+.profile-content .socials a {
+    color: #d2d2d2;
+    margin: 0 15px;
+    font-size: 1.6em;
+    transform: translateY(4px);
+  }
+.profile-content .socials a:hover {
+    color: #aaa;
+    transform: translateY(0);
+  }
+@media(max-width 320px)
+  .profile-picture img
+    margin-left 121px
+
+  .select
+    margin-left 88px
+
+  .Subir
+    margin-left 108px
