--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -7,10 +7,12 @@
            a la hora de reservar tu cancha, contamos con diversos establecimientos de canchas sinteticas
            para que tu elijas la de tu preferencia. Danos la oportunidad de divertirte
         </p>
-        <button ui-sref="users-create" type="button" class="btn btn-primary btn-lg active">¡Comienza Ya!</button>
+
+        <button ui-sref="users-create" type="button" class="btn btn-primary active">¡Comienza Ya!</button>
       </div>
       <div class="col-sm-6 social">
-        <h4 class="title"><strong>Ayudanos a mejorar</strong></h4>
+        <h4 class="title"><strong>Ayudanos a Mejorar</strong></h4>
+
          <form role="form" id="contact-form" class="contact-form">
             <div class="row">
              <div class="col-md-6">
@@ -31,9 +33,12 @@
               </div>
             </div>
           </div>
+
+          <p class="text-justify Text">Aporta tu comenterio para ayudarnos a ofrecerte un mejor servicio y que asi tu experencia con nosotros sea mejor.</p>
             <div class="row">
              <div class="col-md-12">
-               <button type="button" class="btn btn-primary btn-lg active">Enviar Mensaje</button>
+               <button type="button" class="btn btn-primary active">Enviar Mensaje</button>
+
           </div>
         </div>
       </form>
@@ -42,7 +47,9 @@
 
     <hr>
        <div class="row text-center">
-         <h4><strong>Social Soccer</strong></h4>
+
+         <h4 class="opacidad"><strong>Social Soccer</strong></h4>
+
         </div>
 
        <div class="icon text-center">
