--- a/client/app/nosotros/nosotros.styl
+++ b/client/app/nosotros/nosotros.styl
@@ -41,6 +41,7 @@
   display: inline-block;
   width: 250px;
   border-radius: 8px;
+  padding-top: .5em;
 
 .Cancha-Main
   background-image: url("../../assets/images/main/3.jpg");
