--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -11,11 +11,11 @@
           <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary">Iniciar Sesión</md-button>
           <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
-        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-sm-pull-2 ">Registrarse</md-button>
-        <md-button ng-show="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary hidden-xs ">Iniciar Sesión</md-button>
+        <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-sm-pull-2 ">Registrarse</md-button>
+        <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary hidden-xs ">Iniciar Sesión</md-button>
 
-        <md-button ui-sref="profile" ng-show="nav.authService.isAuthenticated()" class="btn btn-success col-xs-5 col-sm-4 col-md-4 col-lg-4 col-md-push-3  Usuario-2">{{nav.authService.userlog()}}</md-button>
-       <md-button name="button" type="button" ng-show="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="btn btn-danger hidden-xs hidden-sm  col-sm-pull-3 col-md-push-3  Usuario">Cerrar Sesion</md-button>
+        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class="btn btn-success col-xs-5 col-sm-4 col-md-4 col-lg-4 col-md-push-3  Usuario-2">{{nav.authService.userlog()}}</md-button>
+       <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="btn btn-danger hidden-xs hidden-sm  col-sm-pull-3 col-md-push-3  Usuario">Cerrar Sesion</md-button>
       </div>
     </div>
   </div>
