se agrega la seccion de paquetes en el main y se implementan animaciones en ella y en el slider

--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -22,6 +22,7 @@
   background-size: cover
   background-repeat: no-repeat
   background-image: url("../../assets/images/main/balon2.jpg")
+  background-attachment fixed
   &-container
     margin: 80px 0
   &-button
@@ -56,16 +57,6 @@
   margin-bottom 1em
 .Slide-padding
   margin 0
-.pintura
-  background-position: center
-  background-size: cover
-  background-repeat: no-repeat
-  background-image: url("../../assets/images/main/18.jpg")
-  width: 100%
-  padding-bottom 1em
-  background-attachment fixed
-
-
 .TRABAJANDO
   font-size 100px
   text-align center
@@ -76,3 +67,58 @@
     .carousel-caption p{font-size: 32px}
     .carousel-caption{padding-bottom:160px}
 }
+
+.paquetes
+  padding-bottom 1px
+  padding-top 10px
+.premium
+  color white
+  background-color #1c4a58
+.oro
+  color white
+  background-color #b79a00
+.estandar
+  color white   
+  background-color #428bca
+.paquete1
+  border 2px solid #1c4a58
+.paquete2
+  border 2px solid #b79a00
+.paquete3
+  border 2px solid #428bca
+.boton1
+  background-color #1c4a58
+  color white
+  border-color #1c4a58
+  border-radius 10px
+.boton1:hover
+  color #1c4a58
+  border-color #1c4a58 
+  background-color white  
+.boton2
+  background-color #b79a00
+  color white    
+  boder-color #b79a00
+  border-radius 10px
+.boton2:hover
+  color #b79a00
+  boder-color #b79a00
+  background-color white
+.boton3
+  background-color #428bca
+  color white       
+  border-color #428bca
+  border-radius 10px
+.boton3:hover
+  color #428bca
+  border-color #428bca
+  background-color white         
+.lead
+  font-size 33px
+  margin-bottom 0px
+.linea 
+  border 3px solid #428bca 
+  border-radius 300px  
+  height 0px
+  text-align center
+  
