--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -7,5 +7,6 @@
   <div ng-if="modal.html" ng-bind-html="modal.html"></div>
 </div>
 <div class="modal-footer">
-  <button ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click($event)" ng-bind="button.text" class="btn"></button>
+  <button ng-repeat="button in modal.buttons" ng-class="button.classes" ng-click="button.click($event)" 
+    ng-bind="button.text" class="btn"></button>
 </div>
