--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -5,11 +5,11 @@
       <div class="col-xs-3 col-md-6 ">
         <a ui-sref="main">Social Soccer</a>
       </div>
-        <a ui-sref="profile"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
-      </a>
-      <div class="col-xs-6 col-md-push-3  ">
-        <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="btn btn-danger hidden-xs hidden-sm   col-md-push-2 Usuario">Cerrar Sesion</md-button>
-        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-8    Usuario-2">
+      <div class="col-xs-6 col-md-12  ">
+        <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
+        </a>
+        <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="btn btn-danger hidden-xs hidden-sm    col-md-push-8 Usuario">Cerrar Sesion</md-button>
+        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-3 col-md-push-8    Usuario-2">
           {{nav.authService.username() }} </md-button>
 
           <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm">Iniciar Sesión</md-button>
