se realizan cambios en el navbar

--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -99,11 +99,11 @@
 .boton2
   background-color #b79a00
   color white
-  boder-color #b79a00
+  border-color #b79a00
   border-radius 10px
 .boton2:hover
   color #b79a00
-  boder-color #b79a00
+  border-color #b79a00
   background-color white
 .boton3
   background-color #428bca
