se coloca filtro de users-list

--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -70,21 +70,21 @@
 }
 
 .paquetes
-  padding-bottom 1px
+  padding-bottom 50px
   padding-top 10px
 .premium
   color white
   background-color #1c4a58
 .oro
   color white
-  background-color #b79a00
+  background-color #204366
 .estandar
   color white
   background-color #428bca
 .paquete1
   border 2px solid #1c4a58
 .paquete2
-  border 2px solid #b79a00
+  border 2px solid #204366
 .paquete3
   border 2px solid #428bca
 .boton1
@@ -97,13 +97,13 @@
   border-color #1c4a58
   background-color white
 .boton2
-  background-color #b79a00
+  background-color #204366
   color white
-  border-color #b79a00
+  border-color #204366
   border-radius 10px
 .boton2:hover
-  color #b79a00
-  border-color #b79a00
+  color #204366
+  border-color #204366
   background-color white
 .boton3
   background-color #428bca
@@ -122,3 +122,7 @@
   border-radius 300px
   height 0px
   text-align center
+
+.Sombra
+  box-shadow 0px 17px 20px rgba(16, 22, 26, 0.75)
+  margin-left 0px
