se agrega el datepicker en reservas

--- a/client/app/reservations/reservations.styl
+++ b/client/app/reservations/reservations.styl
@@ -1,3 +1,10 @@
 .fa-book:before
   margin-right 10px !important
   color #7a7a8c
+
+
+md-datepicker
+  padding 0 !important
+
+.layout-row > .flex-45
+  background white !important
