se agrega el logo

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -8,9 +8,11 @@
 
 .Header-container
   background: rgba(17, 24, 31, 0.9)
-
   color white
 
+.logo
+  width 25%
+  border-rigth solid 2px white 
 
 .Home
   text-transform uppercase
