se agregan cambios

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -36,6 +36,11 @@ input.form-control:focus
   width 94%
 .navbar-nav > li > a
   color #363636
+
+.navbar-nav > li > a:hover
+  color blue
+  background-color white
+
 .Menucontainer
   background-color #f7f7f9
 
