se hace cambios al perfil a la barra de navegacion

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -12,7 +12,10 @@
 
 .logo
   width 25%
-  border-rigth solid 2px white 
+  height 70px
+.titulo
+  border-right solid 2px white
+  margin-right -20px
 
 .Home
   text-transform uppercase
