--- a/client/app/profile/profile.styl
+++ b/client/app/profile/profile.styl
@@ -7,13 +7,13 @@
   padding-bottom: 30px;
 }
 
+
 .profile-header-background {
-  margin: -30px -30px 0 -30px;
 }
 .profile-header-background img {
   width: 100%;
   height: 310px;
-      margin-top: 20px;
+  margin-top: 31px;
 }
 
 .profile-info-left {
@@ -23,10 +23,9 @@
 .profile-info-left img.avatar {
   border: 2px solid #fff;
   width: 100%;
-  margin-top -108px
-}
+  margin-top: -150px;
+  height: 500px;}
 .profile-info-left h2 {
-  font-family: "josefinslab-semibold";
   margin-bottom: 30px;
 }
 .profile-info-left .section {
