--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,27 +2,27 @@
 <header class="Header-container">
   <!-- <div class="container"> -->
     <div class="row Header-containerAlignV">
-      <div class="col-xs-3 col-md-6 ">
-        <img src="assets/images/header/logo.png" class="logo" />
-        <a ui-sref="main">Social Soccer</a>
+      <div class="col-xs-3 col-md-6  ">
+        <img ui-sref="main" src="assets/images/header/logo.png" class="logo hidden-xs hidden-sm" ></img>
+        <a ui-sref="main" class=" titulo visible-xs visible-sm">Social Soccer</a>
       </div>
       <div class="col-xs-6 col-md-6  ">
         <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
         </a>
         <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class=" btn btn-danger hidden-xs hidden-sm    col-md-push-8 Usuario"><i class="fa fa-sign-out"></i> Cerrar Sesion
 </md-button>
-        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-12 col-md-3 col-md-push-8    Usuario-2"><i class="fa fa-user"></i>
+        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-12 col-md-4 col-md-push-8    Usuario-2"><i class="fa fa-user"></i>
           {{nav.authService.username() }} </md-button>
 
-          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm hidden-lg">Iniciar Sesión</md-button>
+          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm hidden-lg">Iniciar Sesión </md-button>
         </div>
       <div class="col-xs-5 col-md-10 col-lg-10  ">
         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
           <i class="fa fa-bars " aria-hidden="true"></i>
         </button>
       </div>
-      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary col-xs-1 col-sm-10  col-md-10   hidden-xs  ">Iniciar Sesión</md-button>
-      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-md-10  col-sm-10 ">Registrarse</md-button>
+      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary col-xs-1 col-sm-10  col-md-10   hidden-xs  "><i class="fa fa-sign-out"></i> Iniciar Sesión  </md-button>
+      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-md-10  col-sm-10 "><i class="fa fa-user-plus"></i>  Registrarse</md-button>
         </div>
   </div>
 </header>
