se modifica la navbar

--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -9,7 +9,8 @@
 .Header-container
   background: rgba(17, 24, 31, 0.9)
   color white
-
+.MenuContainer
+  background #276395
 .logo
   width 25%
   height 70px
@@ -40,9 +41,9 @@ input.form-control:focus
   display flex
   width 94%
 .navbar-nav > li > a
-  color #363636
-.Menucontainer
-  background-color #f7f7f9
+  color white
+.navbar-nav > li > a:hover
+  color black
 
 .btn.Btn-adsi
   background-color  rgba(17, 24, 31, 0.9)
@@ -59,7 +60,7 @@ a
   color white
 
 a:hover
-  color white
+  color lightgreen
 button
   font-size: 25px;
 .Enlace
