--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <a ui-sref="main" class=" titulo visible-xs visible-sm">Social Soccer</a>
       </div>
       <div class="col-xs-6 col-md-6  ">
-        <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
+          <a ui-sref="profile"class="hidden-sm"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
         </a>
         <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class=" btn btn-danger hidden-xs hidden-sm    col-md-push-8 Usuario"><i class="fa fa-sign-out"></i> Cerrar Sesion
 </md-button>
@@ -21,7 +21,7 @@
           <i class="fa fa-bars " aria-hidden="true"></i>
         </button>
       </div>
-      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary col-xs-1 col-sm-10  col-md-10   hidden-xs  "><i class="fa fa-sign-out"></i> Iniciar Sesión  </md-button>
+      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary col-xs-1 col-sm-10  col-md-10   hidden-xs  "><i class="fa fa-sign-out"></i>   Iniciar Sesión  </md-button>
       <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-md-10  col-sm-10 "><i class="fa fa-user-plus"></i>  Registrarse</md-button>
         </div>
   </div>
@@ -30,7 +30,7 @@
 <!--/menu-->
 <div class="MenuContainer">
   <nav class="collapse navbar navbar-collapse" id="navMenu">
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="row AligNavbar">
         <div class="col-xs-12 " nav-bar-ariaiu-label="navigation links">
           <ul class="nav navbar-nav">
