se hacer arreglos al diseño de users-create

--- a/client/app/profile/profile.styl
+++ b/client/app/profile/profile.styl
@@ -8,6 +8,12 @@
 }
 
 
+.nav-pills > li > a
+  margin-top: 10px;
+
+.list
+  margin-top 18px
+
 .profile-header-background {
 }
 .profile-header-background img {
