--- a/client/app/users/users-create/users-create.styl
+++ b/client/app/users/users-create/users-create.styl
@@ -8,20 +8,25 @@
     margin: 0
   &-form
     background: white//rgba(0, 0, 0, 0.4)
-    border-radius: 3px;
-    padding: 30px 30px
-    margin: 63px 0
+    border-radius 3px;
+    padding 30px 30px
+    margin 63px 0
 
   &-label
-    color: wheat
+    color wheat
   &-button
-    font-weight: bold
-    padding: 0 16px
+    font-weight bold
+    padding 0 16px
 .fa-futbol-o
-  color: gray
-  padding-right: 10px
-  font-size: 35px
+  color gray
+  padding-right 10px
+  font-size 35px
 
 .Regis
-  padding-left: 11px;
-  border-right-width: 1px;
+  padding-left 11px
+  border-right-width 1px
+
+md-input-container.md-icon-left 
+  padding-left: 30px;
+  padding-right: 0;
+  margin-left: -11px;
