se agregan modulos de establecimientos y canchas

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -45,6 +45,7 @@ body
 // Component styles are injected through grunt
 /* inject:styl */
 @import 'courts/courts';
+@import 'establishments/establishments/establishments';
 @import 'forbidden/forbidden';
 @import 'info/info';
 @import 'login/login';
@@ -53,6 +54,7 @@ body
 @import 'profile/profile';
 @import 'reservations/reservations-list/reservations-list';
 @import 'reservations/reservations';
+@import 'soccer-fields/soccer-fields/soccer-fields';
 @import 'upload-file/upload-file/upload-file';
 @import 'users/users-create/users-create';
 @import 'users/users-list/users-list';
